# vision-infra

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: vision-infra-config.cmake.in
examples/: CMakeLists.txt  README.md
examples/basic_config/: CMakeLists.txt  README.md  main.cpp
examples/file_operations/: CMakeLists.txt  README.md  main.cpp
examples/image_processing/: CMakeLists.txt  README.md  main.cpp
examples/logging_demo/: CMakeLists.txt  README.md  main.cpp
include/vision-infra/: vision-infra.hpp
include/vision-infra/config/: Config.hpp  ConfigManager.hpp
include/vision-infra/core/: FileSystem.hpp  Logger.hpp
include/vision-infra/utils/: VisionUtils.hpp
src/config/: CMakeLists.txt  Config.cpp  ConfigManager.cpp
src/core/: CMakeLists.txt  FileSystem.cpp  Logger.cpp
src/utils/: CMakeLists.txt  VisionUtils.cpp
tests/: CMakeLists.txt  README.md
tests/e2e/: CMakeLists.txt  test_simple_integration.cpp
tests/unit/: CMakeLists.txt  test_config.cpp  test_utils_basic.cpp
